add 7-day and 30-day future backlogs